--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,8 +6,13 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 
-
 ---
+
+<style>
+  .list__item {
+    margin-bottom: 3rem;
+  }
+</style>
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
