--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -9,22 +9,27 @@ redirect_from:
 ---
 
 <style>
-  .list__item {
-    margin-bottom: 3rem;
-    position: relative;
-    padding-bottom: 2rem;
-  }
+.list__item {
+  margin-bottom: 3rem;
+  position: relative;
+  padding-bottom: 2rem;
+  max-width: 700px;      /* limite a largura do post (ajuste se quiser) */
+  margin-left: auto;     /* centraliza horizontalmente */
+  margin-right: auto;    /* centraliza horizontalmente */
+}
 
-  .list__item:not(:last-child)::after {
-    content: '...';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 2rem;
-    color: #ccc;
-    user-select: none;
-  }
+.list__item:not(:last-child)::after {
+  content: '...';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2rem;
+  color: #ccc;
+  user-select: none;
+  width: 100%;
+  text-align: center;    /* centraliza o conteúdo do ::after */
+}
 </style>
 
 {% include base_path %}
